--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "react-toast": "^1.0.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
